[package]
name = "crank-hog-v1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crank_hog_v1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", features = ["metadata"] }
mpl-token-metadata = { version = "^1.6.5", features = ["no-entrypoint"] }
solana-program = "1.16.1"
solana-security-txt = "1.1.1"
num-integer = "0.1.44"
